Render transformer attrs to HTML

--- a/test/integration/cases/bug-37.expected.html
+++ b/test/integration/cases/bug-37.expected.html
@@ -9,7 +9,8 @@
 <span class="vscode-highlight-line"><span class="mtk1">      </span><span class="mtk17">&#x3C;/</span><span class="mtk4">rdf:Description</span><span class="mtk17">></span></span>
 <span class="vscode-highlight-line"><span class="mtk1">   </span><span class="mtk17">&#x3C;/</span><span class="mtk4">rdf:RDF</span><span class="mtk17">></span></span>
 <span class="vscode-highlight-line"><span class="mtk17">&#x3C;/</span><span class="mtk4">x:xmpmeta</span><span class="mtk17">></span></span></code></pre>
-<style class="vscode-highlight-styles">:root {
+<style class="vscode-highlight-styles">
+  :root {
   --vscode-highlight-padding-v: 1rem;
   --vscode-highlight-padding-h: 1.5rem;
   --vscode-highlight-padding-top: var(--vscode-highlight-padding-v);
@@ -54,7 +55,8 @@
   background-color: var(--vscode-highlight-line-highlighted-background-color);
   box-shadow: inset var(--vscode-highlight-line-highlighted-border-width) 0 0 0 var(--vscode-highlight-line-highlighted-border-color);
 }
-.default-dark {
+
+  .default-dark {
 background-color: #1E1E1E;
 color: #D4D4D4;
 }
@@ -78,4 +80,5 @@ color: #D4D4D4;
 .default-dark .mtk17 { color: #808080; }
 .default-dark .mtki { font-style: italic; }
 .default-dark .mtkb { font-weight: bold; }
-.default-dark .mtku { text-decoration: underline; text-underline-position: under; }</style>
+.default-dark .mtku { text-decoration: underline; text-underline-position: under; }
+</style>
