--- a/test/integration/cases/xml-theme.expected.html
+++ b/test/integration/cases/xml-theme.expected.html
@@ -1,5 +1,6 @@
 <pre class="oceanic-next vscode-highlight" data-language="js"><code class="vscode-highlight-code"><span class="vscode-highlight-line"><span class="mtk7">console</span><span class="mtk5">.</span><span class="mtk8">log</span><span class="mtk1">(</span><span class="mtk5">"</span><span class="mtk6">Hello, world!</span><span class="mtk5">"</span><span class="mtk1">)</span><span class="mtk5">;</span></span></code></pre>
-<style class="vscode-highlight-styles">:root {
+<style class="vscode-highlight-styles">
+  :root {
   --vscode-highlight-padding-v: 1rem;
   --vscode-highlight-padding-h: 1.5rem;
   --vscode-highlight-padding-top: var(--vscode-highlight-padding-v);
@@ -44,7 +45,8 @@
   background-color: var(--vscode-highlight-line-highlighted-background-color);
   box-shadow: inset var(--vscode-highlight-line-highlighted-border-width) 0 0 0 var(--vscode-highlight-line-highlighted-border-color);
 }
-.oceanic-next {
+
+  .oceanic-next {
 background-color: #1B2B34;
 color: #CDD3DE;
 }
@@ -66,4 +68,5 @@ color: #CDD3DE;
 .oceanic-next .mtk15 { color: #F2777A; }
 .oceanic-next .mtki { font-style: italic; }
 .oceanic-next .mtkb { font-weight: bold; }
-.oceanic-next .mtku { text-decoration: underline; text-underline-position: under; }</style>
+.oceanic-next .mtku { text-decoration: underline; text-underline-position: under; }
+</style>
