--- a/test/integration/cases/xml-theme.expected.html
+++ b/test/integration/cases/xml-theme.expected.html
@@ -1,4 +1,4 @@
-<pre class="oceanic-next vscode-highlight" data-language="js"><code class="vscode-highlight-code"><span class="vscode-highlight-line"><span class="mtk7">console</span><span class="mtk5">.</span><span class="mtk8">log</span><span class="mtk1">(</span><span class="mtk5">"</span><span class="mtk6">Hello, world!</span><span class="mtk5">"</span><span class="mtk1">)</span><span class="mtk5">;</span></span></code></pre>
+<pre class="oceanic-next vscode-highlight" data-language="js" data-index="0"><code class="vscode-highlight-code"><span class="vscode-highlight-line"><span class="mtk7">console</span><span class="mtk5">.</span><span class="mtk8">log</span><span class="mtk1">(</span><span class="mtk5">"</span><span class="mtk6">Hello, world!</span><span class="mtk5">"</span><span class="mtk1">)</span><span class="mtk5">;</span></span></code></pre>
 <style class="vscode-highlight-styles">
   :root {
   --vscode-highlight-padding-v: 1rem;
