test: add integration test case for getWrapperClassName function

--- a/test/integration/cases/code-fence-meta.expected.html
+++ b/test/integration/cases/code-fence-meta.expected.html
@@ -1,4 +1,5 @@
-<pre class="default-dark vscode-highlight" data-language="js"><code class="vscode-highlight-code"><span class="vscode-highlight-line vscode-highlight-line-highlighted"><span class="mtk3">// should be highlighted</span></span></code></pre>
+<pre class="test-wrapper default-dark vscode-highlight" data-language="js"><code class="vscode-highlight-code"><span class="vscode-highlight-line vscode-highlight-line-highlighted"><span class="mtk3">// should be highlighted</span></span></code></pre>
+<pre class="test-wrapper js-test default-dark vscode-highlight" data-language="js"><code class="vscode-highlight-code"><span class="vscode-highlight-line"><span class="mtk3">// should be highlighted</span></span></code></pre>
 <style class="vscode-highlight-styles">
   :root {
   --vscode-highlight-padding-v: 1rem;
