--- a/test/integration/cases/xml-theme.expected.html
+++ b/test/integration/cases/xml-theme.expected.html
@@ -1,5 +1,5 @@
-<pre class="oceanic-next vscode-highlight" data-language="js"><code class="vscode-highlight-code"><span class="vscode-highlight-line"><span class="mtk7">console</span><span class="mtk5">.</span><span class="mtk8">log</span><span class="mtk1">(</span><span class="mtk5">"</span><span class="mtk6">Hello, world!</span><span class="mtk5">"</span><span class="mtk1">)</span><span class="mtk5">;</span></span></code></pre>
-<style class="vscode-highlight-styles">
+<pre class="grvsc-container oceanic-next" data-language="js"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk7">console</span><span class="mtk5">.</span><span class="mtk8">log</span><span class="mtk1">(</span><span class="mtk5">"</span><span class="mtk6">Hello, world!</span><span class="mtk5">"</span><span class="mtk1">)</span><span class="mtk5">;</span></span></code></pre>
+<style class="grvsc-styles">
   :root {
   --vscode-highlight-padding-v: 1rem;
   --vscode-highlight-padding-h: 1.5rem;
@@ -14,7 +14,7 @@
   --vscode-highlight-line-highlighted-border-color: transparent;
 }
 
-.vscode-highlight {
+.grvsc-container {
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   padding-top: 1rem;
@@ -26,12 +26,12 @@
   font-feature-settings: normal;
 }
 
-.vscode-highlight-code {
+.grvsc-code {
   display: inline-block;
   min-width: 100%;
 }
 
-.vscode-highlight-line {
+.grvsc-line {
   display: inline-block;
   box-sizing: border-box;
   width: 100%;
@@ -41,32 +41,20 @@
   padding-right: var(--vscode-highlight-padding-right);
 }
 
-.vscode-highlight-line-highlighted {
+.grvsc-highlighted {
   background-color: var(--vscode-highlight-line-highlighted-background-color);
   box-shadow: inset var(--vscode-highlight-line-highlighted-border-width) 0 0 0 var(--vscode-highlight-line-highlighted-border-color);
 }
 
-  .oceanic-next {
-background-color: #1B2B34;
-color: #CDD3DE;
-}
-
-.oceanic-next .mtk1 { color: #CDD3DE; }
-.oceanic-next .mtk2 { color: #1B2B34; }
-.oceanic-next .mtk3 { color: #65737E; }
-.oceanic-next .mtk4 { color: #F99157; }
-.oceanic-next .mtk5 { color: #5FB3B3; }
-.oceanic-next .mtk6 { color: #99C794; }
-.oceanic-next .mtk7 { color: #FAC863; }
-.oceanic-next .mtk8 { color: #6699CC; }
-.oceanic-next .mtk9 { color: #D8DEE9; }
-.oceanic-next .mtk10 { color: #EC5F67; }
-.oceanic-next .mtk11 { color: #EB606B; }
-.oceanic-next .mtk12 { color: #BB80B3; }
-.oceanic-next .mtk13 { color: #C594C5; }
-.oceanic-next .mtk14 { color: #AB7967; }
-.oceanic-next .mtk15 { color: #F2777A; }
-.oceanic-next .mtki { font-style: italic; }
-.oceanic-next .mtkb { font-weight: bold; }
-.oceanic-next .mtku { text-decoration: underline; text-underline-position: under; }
+  .mtki {font-style: italic; }
+  .mtkb {font-weight: bold; }
+  .mtku {text-decoration: underline;
+    text-underline-position: under;}
+  .oceanic-next {background-color: #1B2B34;
+    color: #CDD3DE;}
+  .oceanic-next .mtk7 {color: #FAC863; }
+  .oceanic-next .mtk5 {color: #5FB3B3; }
+  .oceanic-next .mtk8 {color: #6699CC; }
+  .oceanic-next .mtk1 {color: #CDD3DE; }
+  .oceanic-next .mtk6 {color: #99C794; }
 </style>
