--- a/test/integration/cases/code-fence-meta.expected.html
+++ b/test/integration/cases/code-fence-meta.expected.html
@@ -1,6 +1,6 @@
-<pre class="test-wrapper default-dark vscode-highlight" data-language="js"><code class="vscode-highlight-code"><span class="vscode-highlight-line vscode-highlight-line-highlighted"><span class="mtk3">// should be highlighted</span></span></code></pre>
-<pre class="test-wrapper js-test default-dark vscode-highlight" data-language="js"><code class="vscode-highlight-code"><span class="vscode-highlight-line"><span class="mtk3">// should be highlighted</span></span></code></pre>
-<style class="vscode-highlight-styles">
+<pre class="grvsc-container test-wrapper default-dark" data-language="js"><code class="grvsc-code"><span class="grvsc-line grvsc-highlighted"><span class="mtk3">// should be highlighted</span></span></code></pre>
+<pre class="grvsc-container test-wrapper js-test default-dark" data-language="js"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk3">// should not be highlighted</span></span></code></pre>
+<style class="grvsc-styles">
   :root {
   --vscode-highlight-padding-v: 1rem;
   --vscode-highlight-padding-h: 1.5rem;
@@ -15,7 +15,7 @@
   --vscode-highlight-line-highlighted-border-color: transparent;
 }
 
-.vscode-highlight {
+.grvsc-container {
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   padding-top: 1rem;
@@ -27,12 +27,12 @@
   font-feature-settings: normal;
 }
 
-.vscode-highlight-code {
+.grvsc-code {
   display: inline-block;
   min-width: 100%;
 }
 
-.vscode-highlight-line {
+.grvsc-line {
   display: inline-block;
   box-sizing: border-box;
   width: 100%;
@@ -42,34 +42,16 @@
   padding-right: var(--vscode-highlight-padding-right);
 }
 
-.vscode-highlight-line-highlighted {
+.grvsc-highlighted {
   background-color: var(--vscode-highlight-line-highlighted-background-color);
   box-shadow: inset var(--vscode-highlight-line-highlighted-border-width) 0 0 0 var(--vscode-highlight-line-highlighted-border-color);
 }
 
-  .default-dark {
-background-color: #1E1E1E;
-color: #D4D4D4;
-}
-
-.default-dark .mtk1 { color: #D4D4D4; }
-.default-dark .mtk2 { color: #1E1E1E; }
-.default-dark .mtk3 { color: #6A9955; }
-.default-dark .mtk4 { color: #569CD6; }
-.default-dark .mtk5 { color: #D16969; }
-.default-dark .mtk6 { color: #D7BA7D; }
-.default-dark .mtk7 { color: #B5CEA8; }
-.default-dark .mtk8 { color: #CE9178; }
-.default-dark .mtk9 { color: #646695; }
-.default-dark .mtk10 { color: #4EC9B0; }
-.default-dark .mtk11 { color: #DCDCAA; }
-.default-dark .mtk12 { color: #9CDCFE; }
-.default-dark .mtk13 { color: #000080; }
-.default-dark .mtk14 { color: #F44747; }
-.default-dark .mtk15 { color: #C586C0; }
-.default-dark .mtk16 { color: #6796E6; }
-.default-dark .mtk17 { color: #808080; }
-.default-dark .mtki { font-style: italic; }
-.default-dark .mtkb { font-weight: bold; }
-.default-dark .mtku { text-decoration: underline; text-underline-position: under; }
+  .mtki {font-style: italic; }
+  .mtkb {font-weight: bold; }
+  .mtku {text-decoration: underline;
+    text-underline-position: under;}
+  .default-dark {background-color: #1E1E1E;
+    color: #D4D4D4;}
+  .default-dark .mtk3 {color: #6A9955; }
 </style>
