Per-theme bold/italic/underline

--- a/test/integration/cases/code-fence-meta.expected.html
+++ b/test/integration/cases/code-fence-meta.expected.html
@@ -2,56 +2,54 @@
 <pre class="grvsc-container test-wrapper js-test default-dark" data-language="js"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk3">// should not be highlighted</span></span></code></pre>
 <style class="grvsc-styles">
   :root {
-  --vscode-highlight-padding-v: 1rem;
-  --vscode-highlight-padding-h: 1.5rem;
-  --vscode-highlight-padding-top: var(--vscode-highlight-padding-v);
-  --vscode-highlight-padding-right: var(--vscode-highlight-padding-h);
-  --vscode-highlight-padding-bottom: var(--vscode-highlight-padding-v);
-  --vscode-highlight-padding-left: var(--vscode-highlight-padding-h);
-  --vscode-highlight-border-radius: 8px;
-
-  --vscode-highlight-line-highlighted-background-color: transparent;
-  --vscode-highlight-line-highlighted-border-width: 4px;
-  --vscode-highlight-line-highlighted-border-color: transparent;
-}
-
-.grvsc-container {
-  overflow: auto;
-  -webkit-overflow-scrolling: touch;
-  padding-top: 1rem;
-  padding-top: var(--vscode-highlight-padding-top);
-  padding-bottom: 1rem;
-  padding-bottom: var(--vscode-highlight-padding-bottom);
-  border-radius: 8px;
-  border-radius: var(--vscode-highlight-border-radius);
-  font-feature-settings: normal;
-}
-
-.grvsc-code {
-  display: inline-block;
-  min-width: 100%;
-}
-
-.grvsc-line {
-  display: inline-block;
-  box-sizing: border-box;
-  width: 100%;
-  padding-left: 1.5rem;
-  padding-left: var(--vscode-highlight-padding-left);
-  padding-right: 1.5rem;
-  padding-right: var(--vscode-highlight-padding-right);
-}
-
-.grvsc-highlighted {
-  background-color: var(--vscode-highlight-line-highlighted-background-color);
-  box-shadow: inset var(--vscode-highlight-line-highlighted-border-width) 0 0 0 var(--vscode-highlight-line-highlighted-border-color);
-}
-
-  .mtki {font-style: italic; }
-  .mtkb {font-weight: bold; }
-  .mtku {text-decoration: underline;
-    text-underline-position: under;}
-  .default-dark {background-color: #1E1E1E;
-    color: #D4D4D4;}
-  .default-dark .mtk3 {color: #6A9955; }
+    --vscode-highlight-padding-v: 1rem;
+    --vscode-highlight-padding-h: 1.5rem;
+    --vscode-highlight-padding-top: var(--vscode-highlight-padding-v);
+    --vscode-highlight-padding-right: var(--vscode-highlight-padding-h);
+    --vscode-highlight-padding-bottom: var(--vscode-highlight-padding-v);
+    --vscode-highlight-padding-left: var(--vscode-highlight-padding-h);
+    --vscode-highlight-border-radius: 8px;
+  
+    --vscode-highlight-line-highlighted-background-color: transparent;
+    --vscode-highlight-line-highlighted-border-width: 4px;
+    --vscode-highlight-line-highlighted-border-color: transparent;
+  }
+  
+  .grvsc-container {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    padding-top: 1rem;
+    padding-top: var(--vscode-highlight-padding-top);
+    padding-bottom: 1rem;
+    padding-bottom: var(--vscode-highlight-padding-bottom);
+    border-radius: 8px;
+    border-radius: var(--vscode-highlight-border-radius);
+    font-feature-settings: normal;
+  }
+  
+  .grvsc-code {
+    display: inline-block;
+    min-width: 100%;
+  }
+  
+  .grvsc-line {
+    display: inline-block;
+    box-sizing: border-box;
+    width: 100%;
+    padding-left: 1.5rem;
+    padding-left: var(--vscode-highlight-padding-left);
+    padding-right: 1.5rem;
+    padding-right: var(--vscode-highlight-padding-right);
+  }
+  
+  .grvsc-highlighted {
+    background-color: var(--vscode-highlight-line-highlighted-background-color);
+    box-shadow: inset var(--vscode-highlight-line-highlighted-border-width) 0 0 0 var(--vscode-highlight-line-highlighted-border-color);
+  }
+  
+  .default-dark {
+    background-color: #1E1E1E;
+    color: #D4D4D4;
+  }
+  .default-dark .mtk3 { color: #6A9955; }
 </style>
