--- a/test/integration/cases/xml-theme.expected.html
+++ b/test/integration/cases/xml-theme.expected.html
@@ -1,60 +1,58 @@
 <pre class="grvsc-container oceanic-next" data-language="js"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk7">console</span><span class="mtk5">.</span><span class="mtk8">log</span><span class="mtk1">(</span><span class="mtk5">"</span><span class="mtk6">Hello, world!</span><span class="mtk5">"</span><span class="mtk1">)</span><span class="mtk5">;</span></span></code></pre>
 <style class="grvsc-styles">
   :root {
-  --vscode-highlight-padding-v: 1rem;
-  --vscode-highlight-padding-h: 1.5rem;
-  --vscode-highlight-padding-top: var(--vscode-highlight-padding-v);
-  --vscode-highlight-padding-right: var(--vscode-highlight-padding-h);
-  --vscode-highlight-padding-bottom: var(--vscode-highlight-padding-v);
-  --vscode-highlight-padding-left: var(--vscode-highlight-padding-h);
-  --vscode-highlight-border-radius: 8px;
-
-  --vscode-highlight-line-highlighted-background-color: transparent;
-  --vscode-highlight-line-highlighted-border-width: 4px;
-  --vscode-highlight-line-highlighted-border-color: transparent;
-}
-
-.grvsc-container {
-  overflow: auto;
-  -webkit-overflow-scrolling: touch;
-  padding-top: 1rem;
-  padding-top: var(--vscode-highlight-padding-top);
-  padding-bottom: 1rem;
-  padding-bottom: var(--vscode-highlight-padding-bottom);
-  border-radius: 8px;
-  border-radius: var(--vscode-highlight-border-radius);
-  font-feature-settings: normal;
-}
-
-.grvsc-code {
-  display: inline-block;
-  min-width: 100%;
-}
-
-.grvsc-line {
-  display: inline-block;
-  box-sizing: border-box;
-  width: 100%;
-  padding-left: 1.5rem;
-  padding-left: var(--vscode-highlight-padding-left);
-  padding-right: 1.5rem;
-  padding-right: var(--vscode-highlight-padding-right);
-}
-
-.grvsc-highlighted {
-  background-color: var(--vscode-highlight-line-highlighted-background-color);
-  box-shadow: inset var(--vscode-highlight-line-highlighted-border-width) 0 0 0 var(--vscode-highlight-line-highlighted-border-color);
-}
-
-  .mtki {font-style: italic; }
-  .mtkb {font-weight: bold; }
-  .mtku {text-decoration: underline;
-    text-underline-position: under;}
-  .oceanic-next {background-color: #1B2B34;
-    color: #CDD3DE;}
-  .oceanic-next .mtk7 {color: #FAC863; }
-  .oceanic-next .mtk5 {color: #5FB3B3; }
-  .oceanic-next .mtk8 {color: #6699CC; }
-  .oceanic-next .mtk1 {color: #CDD3DE; }
-  .oceanic-next .mtk6 {color: #99C794; }
+    --vscode-highlight-padding-v: 1rem;
+    --vscode-highlight-padding-h: 1.5rem;
+    --vscode-highlight-padding-top: var(--vscode-highlight-padding-v);
+    --vscode-highlight-padding-right: var(--vscode-highlight-padding-h);
+    --vscode-highlight-padding-bottom: var(--vscode-highlight-padding-v);
+    --vscode-highlight-padding-left: var(--vscode-highlight-padding-h);
+    --vscode-highlight-border-radius: 8px;
+  
+    --vscode-highlight-line-highlighted-background-color: transparent;
+    --vscode-highlight-line-highlighted-border-width: 4px;
+    --vscode-highlight-line-highlighted-border-color: transparent;
+  }
+  
+  .grvsc-container {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    padding-top: 1rem;
+    padding-top: var(--vscode-highlight-padding-top);
+    padding-bottom: 1rem;
+    padding-bottom: var(--vscode-highlight-padding-bottom);
+    border-radius: 8px;
+    border-radius: var(--vscode-highlight-border-radius);
+    font-feature-settings: normal;
+  }
+  
+  .grvsc-code {
+    display: inline-block;
+    min-width: 100%;
+  }
+  
+  .grvsc-line {
+    display: inline-block;
+    box-sizing: border-box;
+    width: 100%;
+    padding-left: 1.5rem;
+    padding-left: var(--vscode-highlight-padding-left);
+    padding-right: 1.5rem;
+    padding-right: var(--vscode-highlight-padding-right);
+  }
+  
+  .grvsc-highlighted {
+    background-color: var(--vscode-highlight-line-highlighted-background-color);
+    box-shadow: inset var(--vscode-highlight-line-highlighted-border-width) 0 0 0 var(--vscode-highlight-line-highlighted-border-color);
+  }
+  
+  .oceanic-next {
+    background-color: #1B2B34;
+    color: #CDD3DE;
+  }
+  .oceanic-next .mtk7 { color: #FAC863; }
+  .oceanic-next .mtk5 { color: #5FB3B3; }
+  .oceanic-next .mtk8 { color: #6699CC; }
+  .oceanic-next .mtk1 { color: #CDD3DE; }
+  .oceanic-next .mtk6 { color: #99C794; }
 </style>
