--- a/test/integration/cases/highlight-directive-comments.expected.html
+++ b/test/integration/cases/highlight-directive-comments.expected.html
@@ -16,28 +16,28 @@
 <span class="grvsc-line"><span class="mtk1">}</span></span></code></pre>
 <style class="grvsc-styles">
   :root {
-    --vscode-highlight-padding-v: 1rem;
-    --vscode-highlight-padding-h: 1.5rem;
-    --vscode-highlight-padding-top: var(--vscode-highlight-padding-v);
-    --vscode-highlight-padding-right: var(--vscode-highlight-padding-h);
-    --vscode-highlight-padding-bottom: var(--vscode-highlight-padding-v);
-    --vscode-highlight-padding-left: var(--vscode-highlight-padding-h);
-    --vscode-highlight-border-radius: 8px;
+    --grvsc-padding-v: 1rem;
+    --grvsc-padding-h: 1.5rem;
+    --grvsc-padding-top: var(--grvsc-padding-v);
+    --grvsc-padding-right: var(--grvsc-padding-h);
+    --grvsc-padding-bottom: var(--grvsc-padding-v);
+    --grvsc-padding-left: var(--grvsc-padding-h);
+    --grvsc-border-radius: 8px;
   
-    --vscode-highlight-line-highlighted-background-color: transparent;
-    --vscode-highlight-line-highlighted-border-width: 4px;
-    --vscode-highlight-line-highlighted-border-color: transparent;
+    --grvsc-line-highlighted-background-color: transparent;
+    --grvsc-line-highlighted-border-width: 4px;
+    --grvsc-line-highlighted-border-color: transparent;
   }
   
   .grvsc-container {
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     padding-top: 1rem;
-    padding-top: var(--vscode-highlight-padding-top);
+    padding-top: var(--grvsc-padding-top);
     padding-bottom: 1rem;
-    padding-bottom: var(--vscode-highlight-padding-bottom);
+    padding-bottom: var(--grvsc-padding-bottom);
     border-radius: 8px;
-    border-radius: var(--vscode-highlight-border-radius);
+    border-radius: var(--grvsc-border-radius);
     font-feature-settings: normal;
   }
   
@@ -51,14 +51,14 @@
     box-sizing: border-box;
     width: 100%;
     padding-left: 1.5rem;
-    padding-left: var(--vscode-highlight-padding-left);
+    padding-left: var(--grvsc-padding-left);
     padding-right: 1.5rem;
-    padding-right: var(--vscode-highlight-padding-right);
+    padding-right: var(--grvsc-padding-right);
   }
   
   .grvsc-highlighted {
-    background-color: var(--vscode-highlight-line-highlighted-background-color);
-    box-shadow: inset var(--vscode-highlight-line-highlighted-border-width) 0 0 0 var(--vscode-highlight-line-highlighted-border-color);
+    background-color: var(--grvsc-line-highlighted-background-color);
+    box-shadow: inset var(--grvsc-line-highlighted-border-width) 0 0 0 var(--grvsc-line-highlighted-border-color);
   }
   
   .default-dark {
