.grvsc-highlighted -> .grvsc-line-highlighted

--- a/test/integration/cases/code-fence-meta.expected.html
+++ b/test/integration/cases/code-fence-meta.expected.html
@@ -1,4 +1,4 @@
-<pre class="grvsc-container test-wrapper default-dark" data-language="js"><code class="grvsc-code"><span class="grvsc-line grvsc-highlighted"><span class="mtk3">// should be highlighted</span></span></code></pre>
+<pre class="grvsc-container test-wrapper default-dark" data-language="js"><code class="grvsc-code"><span class="grvsc-line grvsc-line-highlighted"><span class="mtk3">// should be highlighted</span></span></code></pre>
 <pre class="grvsc-container test-wrapper js-test default-dark" data-language="js"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk3">// should not be highlighted</span></span></code></pre>
 <style class="grvsc-styles">
   :root {
@@ -42,7 +42,7 @@
     padding-right: var(--grvsc-padding-right);
   }
   
-  .grvsc-highlighted {
+  .grvsc-line-highlighted {
     background-color: var(--grvsc-line-highlighted-background-color);
     box-shadow: inset var(--grvsc-line-highlighted-border-width) 0 0 0 var(--grvsc-line-highlighted-border-color);
   }
