--- a/test/integration/cases/parent-selector.expected.html
+++ b/test/integration/cases/parent-selector.expected.html
@@ -41,7 +41,7 @@
     padding-right: var(--grvsc-padding-right);
   }
   
-  .grvsc-highlighted {
+  .grvsc-line-highlighted {
     background-color: var(--grvsc-line-highlighted-background-color);
     box-shadow: inset var(--grvsc-line-highlighted-border-width) 0 0 0 var(--grvsc-line-highlighted-border-color);
   }
