Fix a couple broken things

--- a/test/integration/cases/npm-extension.expected.html
+++ b/test/integration/cases/npm-extension.expected.html
@@ -1,4 +1,4 @@
-<pre class="grvsc-container synthwave-vscode" data-language="js"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk4 mtki">/**</span></span>
+<pre class="grvsc-container synthwave-vscode" data-language="js" data-index="0"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk4 mtki">/**</span></span>
 <span class="grvsc-line"><span class="mtk4 mtki"> * </span><span class="mtk9 mtki">@param</span><span class="mtk4 mtki"> </span><span class="mtk7 mtki">{*}</span><span class="mtk4 mtki"> </span><span class="mtk3 mtki">cache</span></span>
 <span class="grvsc-line"><span class="mtk4 mtki"> * </span><span class="mtk9 mtki">@param</span><span class="mtk4 mtki"> </span><span class="mtk7 mtki">{string}</span><span class="mtk4 mtki"> </span><span class="mtk3 mtki">key</span></span>
 <span class="grvsc-line"><span class="mtk4 mtki"> * </span><span class="mtk9 mtki">@param</span><span class="mtk4 mtki"> </span><span class="mtk7 mtki">{object}</span><span class="mtk4 mtki"> </span><span class="mtk3 mtki">value</span></span>
