--- a/test/integration/baselines/highlight-directive-comments.html
+++ b/test/integration/baselines/highlight-directive-comments.html
@@ -1,9 +1,9 @@
 <pre class="grvsc-container default-dark" data-language="ts" data-index="0"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">x</span><span class="mtk1"> = </span><span class="mtk7">0</span><span class="mtk1">;</span></span>
 <span class="grvsc-line grvsc-line-highlighted"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">y</span><span class="mtk1"> = </span><span class="mtk7">1</span><span class="mtk1">; </span></span>
 <span class="grvsc-line"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">z</span><span class="mtk1"> = </span><span class="mtk7">2</span><span class="mtk1">;</span></span></code></pre>
-<pre class="grvsc-container default-dark" data-language="shell" data-index="1"><code class="grvsc-code"><span class="grvsc-line">npm install</span>
-<span class="grvsc-line grvsc-line-highlighted">npm run build </span>
-<span class="grvsc-line">npm start</span></code></pre>
+<pre class="grvsc-container default-dark" data-language="sh" data-index="1"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk1">npm install</span></span>
+<span class="grvsc-line grvsc-line-highlighted"><span class="mtk1">npm run build </span></span>
+<span class="grvsc-line"><span class="mtk1">npm start</span></span></code></pre>
 <pre class="grvsc-container default-dark" data-language="js" data-index="2"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk3">// This is where the interesting part is</span></span>
 <span class="grvsc-line grvsc-line-highlighted"><span class="mtk4">function</span><span class="mtk1"> </span><span class="mtk11">somethingSuperInteresting</span><span class="mtk1">() {</span></span>
 <span class="grvsc-line grvsc-line-highlighted"><span class="mtk1">  </span><span class="mtk10">console</span><span class="mtk1">.</span><span class="mtk11">log</span><span class="mtk1">(</span><span class="mtk4">this</span><span class="mtk1">);</span></span>
