Fixes axe rule scrollable-region-focusable

--- a/test/integration/baselines/code-fence-meta.html
+++ b/test/integration/baselines/code-fence-meta.html
@@ -1,5 +1,5 @@
-<pre class="grvsc-container test-wrapper default-dark" data-language="js" data-index="0"><code class="grvsc-code"><span class="grvsc-line grvsc-line-highlighted"><span class="mtk3">// should be highlighted</span></span></code></pre>
-<pre class="grvsc-container test-wrapper js-test default-dark" data-language="js" data-index="1"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk3">// should not be highlighted</span></span></code></pre>
+<pre class="grvsc-container test-wrapper default-dark" data-language="js" data-index="0" tabindex="0"><code class="grvsc-code"><span class="grvsc-line grvsc-line-highlighted"><span class="mtk3">// should be highlighted</span></span></code></pre>
+<pre class="grvsc-container test-wrapper js-test default-dark" data-language="js" data-index="1" tabindex="0"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk3">// should not be highlighted</span></span></code></pre>
 <style class="grvsc-styles">
   .grvsc-container {
     overflow: auto;
