--- a/test/integration/baselines/highlight-directive-comments.html
+++ b/test/integration/baselines/highlight-directive-comments.html
@@ -1,16 +1,16 @@
-<pre class="grvsc-container default-dark" data-language="ts" data-index="0"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">x</span><span class="mtk1"> = </span><span class="mtk7">0</span><span class="mtk1">;</span></span>
+<pre class="grvsc-container default-dark" data-language="ts" data-index="0" tabindex="0"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">x</span><span class="mtk1"> = </span><span class="mtk7">0</span><span class="mtk1">;</span></span>
 <span class="grvsc-line grvsc-line-highlighted"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">y</span><span class="mtk1"> = </span><span class="mtk7">1</span><span class="mtk1">; </span></span>
 <span class="grvsc-line"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">z</span><span class="mtk1"> = </span><span class="mtk7">2</span><span class="mtk1">;</span></span></code></pre>
-<pre class="grvsc-container default-dark" data-language="sh" data-index="1"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk1">npm install</span></span>
+<pre class="grvsc-container default-dark" data-language="sh" data-index="1" tabindex="0"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk1">npm install</span></span>
 <span class="grvsc-line grvsc-line-highlighted"><span class="mtk1">npm run build </span></span>
 <span class="grvsc-line"><span class="mtk1">npm start</span></span></code></pre>
-<pre class="grvsc-container default-dark" data-language="js" data-index="2"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk3">// This is where the interesting part is</span></span>
+<pre class="grvsc-container default-dark" data-language="js" data-index="2" tabindex="0"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk3">// This is where the interesting part is</span></span>
 <span class="grvsc-line grvsc-line-highlighted"><span class="mtk4">function</span><span class="mtk1"> </span><span class="mtk11">somethingSuperInteresting</span><span class="mtk1">() {</span></span>
 <span class="grvsc-line grvsc-line-highlighted"><span class="mtk1">  </span><span class="mtk10">console</span><span class="mtk1">.</span><span class="mtk11">log</span><span class="mtk1">(</span><span class="mtk4">this</span><span class="mtk1">);</span></span>
 <span class="grvsc-line grvsc-line-highlighted"><span class="mtk1">}</span></span>
 <span class="grvsc-line"></span>
 <span class="grvsc-line"><span class="mtk11">somethingSuperInteresting</span><span class="mtk1">();</span></span></code></pre>
-<pre class="grvsc-container default-dark" data-language="swift" data-index="3"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk4">enum</span><span class="mtk1"> </span><span class="mtk10">Thing</span><span class="mtk1"> {</span></span>
+<pre class="grvsc-container default-dark" data-language="swift" data-index="3" tabindex="0"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk4">enum</span><span class="mtk1"> </span><span class="mtk10">Thing</span><span class="mtk1"> {</span></span>
 <span class="grvsc-line"><span class="mtk1">  </span><span class="mtk15">case</span><span class="mtk1"> one</span></span>
 <span class="grvsc-line grvsc-line-highlighted"><span class="mtk1">  </span><span class="mtk15">case</span><span class="mtk1"> </span><span class="mtk11">two</span><span class="mtk1">(</span><span class="mtk12">_</span><span class="mtk1"> name: </span><span class="mtk10">String</span><span class="mtk1">)</span></span>
 <span class="grvsc-line"><span class="mtk1">}</span></span></code></pre>
