--- a/test/integration/baselines/parent-selector.html
+++ b/test/integration/baselines/parent-selector.html
@@ -1,4 +1,4 @@
-<pre class="grvsc-container default-light grvsc-ps-tYvMB2" data-language="js" data-index="0"><code class="grvsc-code"><span class="grvsc-line"><span class="grvsc-t7UkM5-9 grvsc-tYvMB2-10">console</span><span class="grvsc-t7UkM5-1 grvsc-tYvMB2-1">.</span><span class="grvsc-t7UkM5-10 grvsc-tYvMB2-11">log</span><span class="grvsc-t7UkM5-1 grvsc-tYvMB2-1">(</span><span class="grvsc-t7UkM5-17 grvsc-tYvMB2-8">"Hello, world!"</span><span class="grvsc-t7UkM5-1 grvsc-tYvMB2-1">);</span></span></code></pre>
+<pre class="grvsc-container default-light grvsc-ps-tYvMB2" data-language="js" data-index="0" tabindex="0"><code class="grvsc-code"><span class="grvsc-line"><span class="grvsc-t7UkM5-9 grvsc-tYvMB2-10">console</span><span class="grvsc-t7UkM5-1 grvsc-tYvMB2-1">.</span><span class="grvsc-t7UkM5-10 grvsc-tYvMB2-11">log</span><span class="grvsc-t7UkM5-1 grvsc-tYvMB2-1">(</span><span class="grvsc-t7UkM5-17 grvsc-tYvMB2-8">"Hello, world!"</span><span class="grvsc-t7UkM5-1 grvsc-tYvMB2-1">);</span></span></code></pre>
 <style class="grvsc-styles">
   .grvsc-container {
     overflow: auto;
