--- a/test/integration/baselines/vsix.html
+++ b/test/integration/baselines/vsix.html
@@ -1,4 +1,4 @@
-<pre class="grvsc-container one-dark-pro" data-language="js" data-index="0"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk5 mtki">/**</span></span>
+<pre class="grvsc-container one-dark-pro" data-language="js" data-index="0" tabindex="0"><code class="grvsc-code"><span class="grvsc-line"><span class="mtk5 mtki">/**</span></span>
 <span class="grvsc-line"><span class="mtk5 mtki"> * </span><span class="mtk10 mtki">@param</span><span class="mtk5 mtki"> </span><span class="mtk11 mtki">{*}</span><span class="mtk5 mtki"> </span><span class="mtk4 mtki">cache</span></span>
 <span class="grvsc-line"><span class="mtk5 mtki"> * </span><span class="mtk10 mtki">@param</span><span class="mtk5 mtki"> </span><span class="mtk11 mtki">{string}</span><span class="mtk5 mtki"> </span><span class="mtk4 mtki">key</span></span>
 <span class="grvsc-line"><span class="mtk5 mtki"> * </span><span class="mtk10 mtki">@param</span><span class="mtk5 mtki"> </span><span class="mtk11 mtki">{object}</span><span class="mtk5 mtki"> </span><span class="mtk4 mtki">value</span></span>
